--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightweight-charts": "^5.0.3",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "react": "^19.0.0",
